--- a/nossa-agua-app/package.json
+++ b/nossa-agua-app/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "next": "13.5.4",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4"
   },
   "devDependencies": {
     "typescript": "^5",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss":"3.13.0",
     "tailwind-merge": "1.14.0",
     "react-hook-form": "7.47.0",
     "react-toastify": "^9.1.3"
